# API-RESTful-simples-com-FastAPI-e-OAuth2

./: .gitignore  README.md  database.db  database.py  locustfile.py  main.py  models.py  pyproject.toml  pytest.ini  repositorio.py  repository.py  security.py  services.py  test_.py
app/: main.py
app/api/v1/endpoints/: auth.py  produtos.py
app/core/: config.py  logger.py  middlewares.py  security.py
app/domain/: exceptions.py  models.py
app/infra/: database.py  models_db.py
app/infra/repositories/: produto_repository.py  usuario_repository.py
app/services/: produto_service.py
